fix:(Dropdown) icon display is not centered

--- a/src/components/dropdown/dropdown.less
+++ b/src/components/dropdown/dropdown.less
@@ -38,7 +38,7 @@
       &-arrow {
         color: var(--adm-color-light);
         font-size: 9px;
-        transform: rotate(0deg) translateY(-1px);
+        transform: rotate(0deg) translateY(1px);
         transition: all ease 0.2s;
         &-active {
           transform: rotate(-180deg) translateY(-1px);
